src/css/index.scss
/* ... */
.pitch{
	font-size:380%;
	margin: 0;
	text-transform: uppercase;
	line-height: 1;
	color: #fff;
  	text-shadow: 1px 0px 0px #04c9fa, 1px -1px 0 #04c9fa, -1px 1px 0 #04c9fa, 1px 1px 0 #04c9fa, 1px 0px 0px #0d7abd, 0px 1px 0px #0d7abd, 2px 1px 0px #0d7abd, 1px 2px 0px #0d7abd, 3px 2px 0px #0d7abd, 2px 3px 0px #0d7abd, 4px 3px 0px #0d7abd, 3px 4px 0px #0d7abd, 5px 4px 0px #0d7abd, 3px 5px 0px #04c9fa, 6px 5px 0px #04c9fa;
  	}



header .logo{max-height: 58px; float:left; margin-top:3px;}


/* 48em = 768px */

@media (max-width: 48rem) {
body{font-size:16px;}
// .mobile-text{font-size:10px !important;}
.media{/* font-size:10px !important; *//*  color:red !important; */}
.form{display: flex !important; flex-direction: column; padding:0; /* width:100vw !important; */ justify-content: center !important;}

.form input:first-child{margin:.5rem 0 !important;}
.form svg{display: none;}
.form h3{left:-5rem;}

input.special{ padding: .5rem 3rem !important; margin:0 auto !important;}

input:matches([type="checkbox"]){color:#ff0000 !important;}

.outer .innerpanel{padding:0 20px 0 20px !important;}

.half {
 justify-content: space-around;
 width:100%;
}

.right { width: 100%; margin-right:0;}

.left {
    width:100%;
  margin-right:0;
}

.news-container #news-toggle:checked ~ .news-content{left:0 !important; padding:0 30px 0 50px;/*  width:100vw !important; */ }

.full-width-image{background-size: cover; background-size: 100vmax 100vmax; position:relative; padding:55px 5% 0 5%}

.headroom {
  will-change: transform;
  position: fixed;
  transition: opacity .5s linear;
  top: inherit !important;
  bottom:0 !important;
  height:auto !important;
}
.headroom--pinned {
  transform: translateY(-100%);
  transition: opacity .25s ease-in-out;
  opacity: 0.9;
  top: inherit !important;
  bottom:50% !important;
  border-top:0px solid !important;
  box-shadow: 1px 5px 13px 2px black;
}

.headroom--pinned .header{top:0 !important;}

.headroom--unpinned {
  transform: translateY(100%);
  top: inherit !important;
  bottom:-140px !important;
}


.headroom--pinned .header .logo{top:-20px !important;}
.header .logo{top:0px !important;}

.header .menu{height:100vh !important;}

.header ul li svg{right:34px !important;}

.header ul li .contact-icon{position:absolute !important; right:35px !important;}

.header ul li label{padding-left:30px !important;}


.headroom--pinned:before{
    content:('');
    position:absolute;
    left:0;
    top:-24px;
    width: 0px;
      height: 0px;
border-style: solid;
border-width: 24px 0 0 24px;
border-color: transparent transparent transparent #666;
z-index: -1;
}


.headroom--pinned:after{
    content:('');
    position:absolute;
    left:-24px;
    bottom:-24px;
    width: 0px;
      height: 0px;
      border-left: 24px solid transparent;
      border-right: 24px solid transparent;
      border-top: 24px solid #222;
}

[aria-current] {
background: rgb(3,73,127); /* Old browsers */
background: -moz-linear-gradient(left, rgba(3,73,127,1) 0%, rgba(65,145,186,1) 60%, rgba(126,209,234,1) 100%); /* FF3.6-15 */
background: -webkit-linear-gradient(left, rgba(3,73,127,1) 0%,rgba(65,145,186,1) 60%,rgba(126,209,234,1) 100%); /* Chrome10-25,Safari5.1-6 */
background: linear-gradient(to right, rgba(3,73,127,1) 0%,rgba(65,145,186,1) 60%,rgba(126,209,234,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */

}

}
/* ... */

